@@ -69,13 +69,8 @@ if ( !defined( 'MW_COMPILED' ) ) {
 	require_once( "$IP/includes/Init.php" );
 }
 
-# Setup the profiler
-global $IP;
-if ( !defined( 'MW_COMPILED' ) && file_exists( "$IP/StartProfiler.php" ) ) {
-	require_once( "$IP/StartProfiler.php" );
-} else {
-	require_once( MWInit::compiledPath( 'includes/profiler/ProfilerStub.php' ) );
-}
+# Stub the profiler
+require_once( MWInit::compiledPath( 'includes/profiler/Profiler.php' ) );
 
 // Some other requires
 if ( !defined( 'MW_COMPILED' ) ) {
